# mediapipe_holistic_ros

./: README.md
mediapipe_holistic_ros/: CMakeLists.txt  package.xml
mediapipe_holistic_ros/launch/: mediapipe_holistic_ros.launch
mediapipe_holistic_ros/msg/: MediaPipeHolistic.msg  MediaPipePose.msg
mediapipe_holistic_ros/script/: mediapipe_holistic_python3.py
